dclone package version history

Version 1.0-3, December 14, 2009
    * jags.fit: if n.iter=0, the (updated) JAGS model is returned
      instead of an MCMC object.

Version 1.0-2, December 4, 2009
    * jags.pfit, bugs.pfit: parallel computing for chains based on snow.
    * mcmc.cluster: internal function for parallel MCMC computations.
    * openbugs.seed: modified version of R2WinBUGS::openbugs with
      RNG seed argument (for parallel computations).
    * dc.pfit: models with different n.clones are run parallel
      with load balancing as default.
    * options got cluster (incl. load.balancing).
    * updated.model attr in jags.fit output for further updating.
    * bg arg in errlines and box.bg in plot.dctable for background
      color of boxes.

Version 1.0-1, November 19, 2009
    * custommodel function added, fitting functions modified.

Version 1.0-0, November 16, 2009
    * Unload problem fixed (reported by Brian D Ripley).
    * dctable now can take more than one models as arguments.
    * Code annotated, documentation revised.

Version 0.9-0, October 19, 2009
    * First CRAN release with basic functionality.
    * Support for WinBUGS added.
    * Initial functionality is stable.