@@ -3,7 +3,7 @@ export("dclone", "dcdim",
        "jags.fit", "bugs.fit", "dc.fit",
        "jags.pfit", "bugs.pfit", "dc.pfit",
        "clean.jags.model", "write.jags.model", "custommodel",
-       "updated.model",
+       "updated.model", "autoupdate",
        "dcsd",
        "nclones",
        "mcmcapply",
